@@ -8,6 +8,7 @@ Version 1.1.3 to be released
 - Bug #1190: CLocale::getMonthNames may fail due to a typo (Qiang)
 - Enh #1188: Removed exception message display in production mode when a DB connection fails to improve security (Qiang)
 - Enh #1189: Added $loadedOnly parameter to CModule::getComponents() so that it can return all application components including unloaded ones (Qiang)
+- Enh #1203: Gii now respects the newDirMode and newFileMode settings even when lower umask is set (Qiang)
 - Enh: Added beforeValidate, afterValidate, beforeValidateAttribute and afterValidateAttribute options to CActiveForm (Qiang)
 
 Version 1.1.2 May 2, 2010
